# FitApp

appfit/: .env.example  .gitignore  README.md
appfit/ai/: meal_rules.py  pyproject.toml  service.py
appfit/ai/prompts/: coach_system.md  plan_system.md
appfit/backend/: alembic.ini  pyproject.toml
appfit/backend/alembic/: env.py
appfit/backend/alembic/versions/: 0001_init.py
appfit/backend/app/: main.py  seed.py
appfit/backend/app/core/: config.py  security.py
appfit/backend/app/db/: session.py
appfit/backend/app/models/: __init__.py  alert.py  badge.py  bodycomp.py  consent.py  device.py  file_asset.py  goal.py  habit.py  hydration.py  leaderboard.py  measurement.py  nutrition.py  quest.py  sleep.py  user.py  workout.py
appfit/backend/app/routers/: auth.py  measurements.py  planner.py  users.py
appfit/backend/app/schemas/: auth.py  measurement.py  planner.py  user.py
appfit/backend/app/services/: alerts.py  gamification.py  planner.py  strava_client.py
appfit/backend/app/utils/: pagination.py
appfit/backend/tests/: conftest.py  test_auth.py  test_health.py  test_planner.py
appfit/infra/: docker-compose.yml  nginx.conf
appfit/mobile/: app.json  package.json
appfit/mobile/app/: Hoje.tsx  Onboarding.tsx  Perfil.tsx  PlanoSemana.tsx  Progresso.tsx  index.tsx
appfit/mobile/lib/: api.ts  storage.ts
appfit/web/: next.config.mjs  package.json
appfit/web/src/app/: page.tsx
appfit/web/src/app/planner/: page.tsx
appfit/web/src/lib/: api.ts
