[project]
name = "appfit-backend"
version = "0.1.0"
description = "AppFit backend"
requires-python = ">=3.11"
dependencies = [
  "fastapi",
  "uvicorn[standard]",
  "sqlalchemy>=2.0",
  "psycopg",
  "alembic",
  "pydantic>=2",
  "python-multipart",
  "passlib[argon2]",
  "redis",
  "python-jose[cryptography]",
  "python-dotenv",
  "httpx",
  "pydantic-settings",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "pytest-asyncio",
  "httpx",
  "ruff",
  "black",
]

[tool.ruff]
line-length = 88

[tool.black]
line-length = 88
